--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shubham Pimparkar | Portfolio</title>
   <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/responsive.css" />
   <link rel="stylesheet" href="css/variables.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 </head>
@@ -28,6 +29,11 @@
           <i class="fas fa-moon"></i>
         </button></li>
       </ul>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </nav>
   </header>
 
@@ -50,8 +56,8 @@
 
 <!-- Left Social Media Bar -->
 <div class="social-icons">
-  <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-  <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+  <a href="https://github.com/shubhampimparkar01" target="_blank"><i class="fab fa-github"></i></a>
+  <a href="https://www.instagram.com/shubham_pimparkar/" target="_blank"><i class="fab fa-instagram"></i></a>
   <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
   <a href="https://linkedin.com/in/shubham-pimparkar-8678a3271/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
   <a href="https://telegram.org" target="_blank"><i class="fab fa-telegram-plane"></i></a>
@@ -85,13 +91,13 @@
         <h3>Education</h3>
         <div class="timeline">
           <div class="timeline-item">
-            <span class="date">2023 - 2025 (Expected)</span>
+            <span class="date">2023 - 2025</span>
             <h4>Master of Science in Computer Science</h4>
             <p class="institution">Currently Pursuing</p>
             <p class="description">Focusing on advanced computing concepts and expanding knowledge in full-stack development.</p>
           </div>
           <div class="timeline-item">
-            <span class="date">2019 - 2023</span>
+            <span class="date">2020 - 2023</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <p class="institution">University Name</p>
             <p class="description">Completed with strong academic performance and hands-on project experience in software development.</p>
@@ -108,7 +114,7 @@
           <div class="timeline-item">
             <h4>Technical Achievements</h4>
             <p class="description">
-              • Built and hosted live applications on Render, Netlify, and GitHub Pages<br>
+              • Built and hosted live applications on Vercel and GitHub Pages<br>
               • Shortlisted for assignments at Blockly Technologies<br>
               • Active participation in mock interviews with positive feedback
             </p>
@@ -148,12 +154,10 @@
             </p>
           </div>
           <div class="timeline-item">
-            <h4>LMS (Learning Management System)</h4>
-            <p class="institution">Online Learning Platform</p>
+            <h4>Book Store Management System</h4>
+            <p class="institution">Web Application</p>
             <p class="description">
-              • Platform for managing courses, students, and learning content<br>
-              • Admins can add courses, students can enroll and track progress<br>
-              • Developed using Java, Spring Boot, MySQL, and HTML/CSS with CRUD operations and role-based access
+              • A web-based Book Store Management System built using HTML, CSS, and JavaScript that allows users to view, search, add, update, and delete book records. It features a user-friendly interface and helps manage book inventory efficiently for small stores or personal collections.
             </p>
           </div>
         </div>
@@ -279,88 +283,76 @@
     </div>
 
     <div class="projects-grid">
-      <!-- Smart Appointment Management System -->
+      <!-- Project 1 -->
       <div class="project-card all fullstack frontend backend">
         <div class="project-img">
-          <img src="https://placehold.co/600x400/e9d5ff/374151?text=Appointment+System" alt="Appointment System">
-          <div class="project-links">
-            <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-            <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-          </div>
+          <img src="https://placehold.co/600x400/e9d5ff/374151?text=Appointment+System" alt="Smart Appointment System" />
+        </div>
+        <div class="project-links">
+          <a href="https://github.com/shubhampimparkar01" class="project-link"><i class="fas fa-eye"></i></a>
+          <a href="https://github.com/shubhampimparkar01" class="project-link"><i class="fab fa-github"></i></a>
         </div>
         <div class="project-content">
           <h3>Smart Appointment Management System</h3>
-          <p>Developed a full-stack web application for managing appointments, featuring real-time availability, admin dashboards, and role-based access. Built with Spring Boot, MySQL, HTML, CSS, and JavaScript.</p>
+          <p>A full-stack web application for managing appointments with real-time availability and role-based access.</p>
           <div class="project-tech">
-            <span>Spring Boot</span>
+            <span>Spring</span>
             <span>MySQL</span>
-            <span>JavaScript</span>
-            <span>HTML</span>
-            <span>CSS</span>
+            <span>HTML/CSS</span>
           </div>
         </div>
       </div>
-
-      <!-- Mall Store Finder -->
+      <!-- Project 2 -->
       <div class="project-card all fullstack frontend backend">
         <div class="project-img">
-          <img src="https://placehold.co/600x400/fde68a/374151?text=Mall+Store+Finder" alt="Mall Store Finder">
-          <div class="project-links">
-            <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-            <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-          </div>
+          <img src="https://placehold.co/600x400/fde68a/374151?text=Mall+Store+Finder" alt="Mall Store Finder" />
+        </div>
+        <div class="project-links">
+          <a href="https://github.com/shubhampimparkar01" class="project-link"><i class="fas fa-eye"></i></a>
+          <a href="https://github.com/shubhampimparkar01" class="project-link"><i class="fab fa-github"></i></a>
         </div>
         <div class="project-content">
           <h3>Mall Store Finder</h3>
-          <p>Created a responsive Angular application for searching and filtering mall stores. Implemented modular design, search, filter, and store details using Angular, HTML, CSS, and RESTful APIs.</p>
+          <p>A responsive Angular application with a modular design for finding stores in a mall.</p>
           <div class="project-tech">
             <span>Angular</span>
-            <span>JavaScript</span>
-            <span>HTML</span>
-            <span>CSS</span>
-            <span>RESTful APIs</span>
+            <span>TypeScript</span>
           </div>
         </div>
       </div>
-
-      <!-- LCP (Lens Crafted Photography) -->
+      <!-- Project 3 -->
       <div class="project-card all fullstack frontend backend">
         <div class="project-img">
-          <img src="https://placehold.co/600x400/ffe066/222?text=LCP+Photography" alt="Lens Crafted Photography">
-          <div class="project-links">
-            <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-            <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-          </div>
+          <img src="https://placehold.co/600x400/ffe066/222?text=LCP+Photography" alt="LCP Portfolio" />
+        </div>
+        <div class="project-links">
+          <a href="https://github.com/shubhampimparkar01" class="project-link"><i class="fas fa-eye"></i></a>
+          <a href="https://github.com/shubhampimparkar01" class="project-link"><i class="fab fa-github"></i></a>
         </div>
         <div class="project-content">
           <h3>LCP (Lens Crafted Photography)</h3>
-          <p>A photography portfolio website where photographers can showcase their work. Includes photo categories, gallery view, contact form, and user-friendly navigation. Built using HTML, CSS, and JavaScript, focusing on clean UI and responsiveness.</p>
+          <p>A photography portfolio website for showcasing work with a focus on clean UI and responsiveness.</p>
           <div class="project-tech">
-            <span>HTML</span>
-            <span>CSS</span>
             <span>JavaScript</span>
+            <span>HTML/CSS</span>
           </div>
         </div>
       </div>
-
-      <!-- LMS (Learning Management System) -->
+      <!-- Project 4 -->
       <div class="project-card all fullstack frontend backend">
         <div class="project-img">
-          <img src="https://placehold.co/600x400/ffd43b/222?text=LMS+System" alt="Learning Management System">
-          <div class="project-links">
-            <a href="#" class="project-link" target="_blank"><i class="fas fa-external-link-alt"></i></a>
-            <a href="#" class="project-link" target="_blank"><i class="fab fa-github"></i></a>
-          </div>
+          <img src="https://placehold.co/600x400/a7f3d0/374151?text=Book+Store" alt="Book Store Management System" />
+        </div>
+        <div class="project-links">
+          <a href="https://github.com/shubhampimparkar01" class="project-link"><i class="fas fa-eye"></i></a>
+          <a href="https://github.com/shubhampimparkar01" class="project-link"><i class="fab fa-github"></i></a>
         </div>
         <div class="project-content">
-          <h3>LMS (Learning Management System)</h3>
-          <p>An online platform for managing courses, students, and learning content. Admins can add courses, students can enroll and track progress. Developed using Java, Spring Boot, MySQL, and HTML/CSS, with a focus on CRUD operations and role-based access.</p>
+          <h3>Book Store Management System</h3>
+          <p>A web-based system to manage book inventory with features to view, search, add, update, and delete records.</p>
           <div class="project-tech">
-            <span>Java</span>
-            <span>Spring Boot</span>
-            <span>MySQL</span>
-            <span>HTML</span>
-            <span>CSS</span>
+            <span>HTML/CSS</span>
+            <span>JavaScript</span>
           </div>
         </div>
       </div>
@@ -402,5 +394,6 @@
 
   <script src="js/main.js"></script>
   <script src="js/toggle.js"></script>
+  <script src="js/responsive.js"></script>
 </body>
 </html>
